Bug 424293 - updating the font icons with error and warning - some missing icons. Also added a deploy icon, and tweaked the branch icon ( based in community feedback ). I tweaked the merge icon too to align it more with the squash merge.

--- a/bundles/org.eclipse.orion.client.ui/web/css/images.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/images.css
@@ -58,24 +58,21 @@
 .core-sprite-compare-addition{ background-position: 0 -108px; width: 16px; height: 16px; } 
 .core-sprite-compare-removal{ background-position: 0 -126px; width: 16px; height: 16px; } 
 .core-sprite-copy-folder{ background-position: 0 -144px; width: 16px; height: 16px; } 
-.core-sprite-error{ background-position: 0 -203px; width: 16px; height: 16px; } 
 .core-sprite-file_model{ background-position: 0 -257px; width: 16px; height: 16px; } 
 .core-sprite-go-down{ background-position: 0 -311px; width: 16px; height: 16px; } 
 .core-sprite-information{ background-position: 0 -365px; width: 16px; height: 16px; } 
 .core-sprite-initproject{ background-position: 0 -383px; width: 16px; height: 16px; } 
-.core-sprite-leftarrow{ background-position: 0 -401px; width: 16px; height: 16px; } 
 .core-sprite-link{ background-position: 0 -419px; width: 16px; height: 16px; } 
 .core-sprite-list{ background-position: 0 -437px; width: 16px; height: 16px; } 
 .core-sprite-none{ background-position: 0 -491px; width: 16px; height: 16px; } 
 .core-sprite-ok{ background-position: 0 -509px; width: 16px; height: 16px; } 
 .core-sprite-orion-logo{ background-position: 0 -545px; width: 36px; height: 25px; } 
 .core-sprite-replaceAll{ background-position: 0 -608px; width: 16px; height: 16px; } 
-.core-sprite-rightarrow{ background-position: 0 -626px; width: 16px; height: 16px; } 
 .core-sprite-sep{ background-position: 0 -644px; width: 1px; height: 16px; } 
 .core-sprite-start{ background-position: 0 -680px; width: 16px; height: 16px; } 
 .core-sprite-stop{ background-position: 0 -698px; width: 16px; height: 16px; } 
 .core-sprite-thumbnail{ background-position: 0 -716px; width: 16px; height: 16px; } 
-.core-sprite-warning{ background-position: 0 -734px; width: 16px; height: 16px; } 
+
 
 .core-sprite-sharecontent {
 	background: url(../images/share.png);
@@ -482,6 +479,48 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.file-sprite-warning{
+	font-size: 16px;
+	color: #555;
+	line-height: normal;
+	vertical-align:middle;
+	font-family: 'Orion Icon Font';
+	padding-right: 5px;
+	background: none;
+	border: none;
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.file-sprite-error{
+	font-size: 16px;
+	color: #555;
+	line-height: normal;
+	vertical-align:middle;
+	font-family: 'Orion Icon Font';
+	padding-right: 5px;
+	background: none;
+	border: none;
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.file-sprite-deploy{
+	font-size: 16px;
+	color: #555;
+	line-height: normal;
+	vertical-align:middle;
+	font-family: 'Orion Icon Font';
+	padding-right: 5px;
+	background: none;
+	border: none;
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 .core-sprite-hamburger:before{ content:'\0041'; }
 .core-sprite-gear:before{ content:'\0042'; }
 .core-sprite-silhouette:before{ content:'\0043'; float: right;}
@@ -503,7 +542,9 @@
 .core-sprite-close:before{ content:'\006F'; }
 .core-sprite-leftarrow:before{content:'\0055';}
 .core-sprite-rightarrow:before{content:'\0056';}
-
+.core-sprite-deploy:before{content:'\0077';}
+.core-sprite-warning:before{content:'\0079';}
+.core-sprite-error:before{content:'\007A';}
 
 /* icons for file types - possibly more to come - at least one for images */ 
 
